--- a/.github/workflows/main_prub.yml
+++ b/.github/workflows/main_prub.yml
@@ -74,5 +74,5 @@ jobs:
         with:
           app-name: 'prub'
           slot-name: 'Production'
-          package: .
+          package: release.zip
           
